--- a/src/components/Design.scss
+++ b/src/components/Design.scss
@@ -3,4 +3,5 @@
 .designList {
     background-color: $e;
     padding: 2rem;
+    margin-bottom: 1rem;
 }
