--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -2,7 +2,6 @@
 
 #footerContainer {
     padding: 0;
-    margin-top: 1rem;
 }
 
 #footer {
