--- a/src/components/Tech.scss
+++ b/src/components/Tech.scss
@@ -3,4 +3,5 @@
 .techList {
     background-color: $e;
     padding: 2rem;
+    margin-bottom: 1rem;
 }
